nodejs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: node:18
          command: ["/bin/bash", "-ce", "tail -f /dev/null"]
          ports:
            - containerPort: 8080
